<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewCoches"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#e0ddec"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp">
    <LinearLayout
        android:id="@+id/linearLayoutCrvCoches"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/desc_img_coche"
            android:src="@mipmap/ic_coche"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5"
            android:weightSum="3">
            <TextView
                android:id="@+id/txtModelo"
                android:text="@string/txtModelo"
                style="@style/Tarea03.CajasTxt.CardView"/>
            <TextView
                android:id="@+id/txtColor"
                android:text="@string/txtColor"
                style="@style/Tarea03.CajasTxt.CardView" />
            <TextView
                android:id="@+id/txtAsientos"
                android:text="@string/txtAsientos"
                style="@style/Tarea03.CajasTxt.CardView" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>


